[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Intro_scene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/village.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/dragon pack/fly3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/dragon pack/fly4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/dragon pack/fly6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/dragon pack/fly5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/dragon pack/fly1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/dragon pack/attack4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/dragon pack/attack2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/dragon pack/attack3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/dragon pack/fly2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/dragon pack/attack1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/dragon pack/idle4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/dragon pack/idle5.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/dragon pack/idle1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/dragon pack/idle2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/dragon pack/idle3.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/dragon pack/idle6.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Intro" type="Node"]
script = ExtResource( 1 )

[node name="Village" type="Sprite" parent="."]
position = Vector2( 766.75, 407 )
scale = Vector2( 4.41643, 3.75926 )
texture = ExtResource( 2 )

[node name="Dragon" type="AnimatedSprite" parent="."]
position = Vector2( -157, 297 )
scale = Vector2( 2.70313, 2.70313 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
